MonetDB/src/modules/plain/Tests/mmath_nan.stable.out.CYGWIN
stdout of test 'mmath_nan` in directory 'src/modules/plain` itself:


# 11:15:09 >  
# 11:15:09 >  Mtimeout -timeout 60 Mserver "--config=/home/sjoerd/src/devel/MonetDB/CYGWIN/conf/MonetDB.conf" --debug=10 --set "monet_mod_path=/home/sjoerd/src/devel/MonetDB/CYGWIN/src/modules/plain/.libs:/home/sjoerd/src/devel/MonetDB/CYGWIN/src/modules/contrib/.libs:/home/sjoerd/src/devel/MonetDB/CYGWIN/src/modules/calibrator/.libs:/home/sjoerd/src/devel/MonetDB/CYGWIN/src/mapi/.libs" --set "gdk_dbfarm=/home/sjoerd/src/devel/MonetDB/CYGWIN/dbfarm" --set "sql_logdir=/home/sjoerd/src/devel/MonetDB/CYGWIN/log" --set mapi_port=40333 --set sql_port=56900 --set monet_prompt= --trace --dbname=mTests_src_modules_plain  < mmath_nan.milM
# 11:15:09 >  

# Monet Database Server V4.5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# Compiled for i686-pc-cygwin/32bit; statically linked.
# Visit http://monetdb.cwi.nl/ for further information.
module("mmath");
log(-1.0LL).print();
!ERROR: Negative argument is not allowed
!ERROR: math_unary_LOG: operation failed.
!ERROR: interpret_params: print(param 1): evaluation error.
(log(-1.0LL)=log(-1.0LL)).print();
!ERROR: Negative argument is not allowed
!ERROR: math_unary_LOG: operation failed.
!ERROR: interpret_params: =(param 1): evaluation error.
!ERROR: interpret_params: print(param 1): evaluation error.
isnan(log(-1.0LL)).print();
!ERROR: Negative argument is not allowed
!ERROR: math_unary_LOG: operation failed.
!ERROR: interpret_params: isnan(param 1): evaluation error.
!ERROR: interpret_params: print(param 1): evaluation error.
quit();

# 11:15:10 >  
# 11:15:10 >  Done.
# 11:15:10 >  

